# ngspice-dcmod

./: .gitignore
src/: Makefile.am
src/frontend/: options.c
src/include/ngspice/: Makefile.am  cktdefs.h  gmres.h
src/maths/ni/: niconv.c  niiter.c
src/maths/sparse/: Makefile.am  feGRASS.cpp  feGRASS.hpp  gmres.c  gmres.h  gmresutils.c  gmresutils.h  graphops.cpp  graphops.hpp  graphwrapper.cpp  newiter.c  oldGS.cpp  spfactor.c  sputils.c  trialmodel.hpp
src/spicelib/analysis/: cktload.c  cktop.c  dctran.c
